gcc/testsuite/rust/rustc/ui/rust-2024/unsafe-extern-blocks/safe-trait_dg.rs
safe trait Foo {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

